Fixed scrollbar issue

--- a/src/styles/ribbon.css
+++ b/src/styles/ribbon.css
@@ -3,7 +3,7 @@
   text-align: left;
   font-weight: bold;
   padding-left: 1%;
-  height: 6%;
+  height: 5vh;
   display: flex;
   align-items: center;
 }
